k8s-deployments/ltgenius-deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ltgenius-fastapi-prod  # Name of the deployment
  namespace: ltgenius-fastapi-prod  # Kubernetes namespace (can be overridden via CLI in the pipeline)
spec:
  replicas: 2  # Number of pods (containers) to run
  selector:
    matchLabels:
      ltgappprod: ltgenius-fastapi-prod  # Label selector to link the pods with the service
  template:
    metadata:
      labels:
        ltgappprod: ltgenius-fastapi-prod
    spec:
      containers:
      - name: ltgenius-fastapi-prod-container
        image: "${IMAGE_PATH}"  # Docker image from ACR
        ports:
        - containerPort: 8000  # Expose port 8000 (FastAPI's default port)
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: ltgenius-fastapi-prod-service
  namespace: ltgenius-fastapi-prod
spec:
  selector:
    ltgappprod: ltgenius-fastapi-prod  # Links this service to the deployment's pods
  ports:
    - protocol: TCP
      port: 80  # External-facing port
      targetPort: 8000  # Port inside the container (FastAPI port)
      # nodePort: 32152
  type: ClusterIP  # Expose the service using a LoadBalancer for external access
  # loadBalancerIP: "${AZURE_AKS_LOADBALANCER_PUBLIC_IP}"
