k8s-deployments/ltgenius-ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prod
  namespace: ltgenius-fastapi-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # Retain the path after "/prod"
spec:
  ingressClassName: nginx  # correct IngressClass name needs to be added here, or else it wont work.
  rules:
  # - host: 48.216.136.164.nip.io
  - http:
      paths:
      - path: /prod(/|$)(.*) # Match anything after /prod, including subpaths
        pathType: Prefix
        backend:
          service:
            name: ltgenius-fastapi-prod-service
            port:
              number: 80
